--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "Academy Award Nominee Trailers",
   "main": "server.js",
   "dependencies": {
-    "expect.js": "^0.3.1",
+    "cheerio": "^0.22.0",
     "data": "^0.6.1",
+    "expect.js": "^0.3.1",
+    "jquery": "^2.2.4",
     "json": "^9.0.2",
-    "jquery": "^2.1.1",
-    "orchestrate": "^0.3.14",
     "json-parser": "^0.2.4",
     "json-stringify": "^0.1.3",
-    "package.json": "^0.0.0",
-    "routes-router": "^4.1.1",
+    "orchestrate": "^0.3.16",
     "package": "^1.0.1",
-    "st": "^0.5.2",
+    "package.json": "^0.0.0",
+    "pkg.json": "^2.0.1",
+    "routes-router": "^4.1.1",
     "send-data": "^3.3.3",
+    "st": "^0.5.5",
     "vows": "^0.8.1",
     "wikipedia-js": "^0.0.6"
   },
